# verde-vba

./: .gitignore  .mise.toml  CLAUDE.md  Justfile  PLANS.md  README.md  flake.nix  index.html  package.json  plan.md  tsconfig.app.json  vitest.config.ts
.github/workflows/: ci.yml
mcp/: package.json  server.js  server.test.js  vitest.config.js
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  com_dispatch.rs  commands.rs  conflict.rs  file_watcher.rs  lib.rs  lock.rs  lsp_sidecar.rs  main.rs  project.rs  settings.rs  vba_bridge.rs
src-tauri/src/project/: com_errors.rs
src-tauri/tests/: conflict_integration.rs
src-tauri/windows/: hooks.nsh
src/components/: Banner.tsx  ConflictDialog.tsx  Editor.tsx  Loader.tsx  LockDialog.tsx  ReadOnlyBar.test.tsx  ReadOnlyBar.tsx  SaveConfirmDialog.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TrustGuideDialog.tsx  WelcomeScreen.tsx
src/hooks/: useConflictResolver.ts  useErrorRouting.test.ts  useErrorRouting.ts  useFileWatcher.test.ts  useFileWatcher.ts  useHotExit.ts  useInitialFileOpen.ts  useLocale.ts  useLspClient.test.ts  useLspClient.ts  useModuleTabs.test.ts  useModuleTabs.ts  useOpenFile.test.ts  useOpenFile.ts  useSave.test.ts  useSave.ts  useTheme.ts  useTrust.test.ts  useTrust.ts  useVerdeProject.test.ts  useVerdeProject.ts  useWindowCloseGuard.ts  useWindowTitle.ts  useWorkspaceModels.ts
src/lib/: error-parse.test.ts  error-parse.ts  hot-exit.ts  lsp-bridge.test.ts  lsp-bridge.ts  lsp-message-transports.test.ts  lsp-message-transports.ts  lsp-monaco-providers.test.ts  lsp-monaco-providers.ts  monaco-vba.test.ts  monaco-vba.ts  tauri-commands.ts  tauri-window.ts  tree-sitter-vba.folding.test.ts  tree-sitter-vba.semantic.test.ts  tree-sitter-vba.test.ts  tree-sitter-vba.ts  types.ts
src/locales/: en.json  ja.json
src/styles/: global.css
